--- a/CV-MEJORADO.html
+++ b/CV-MEJORADO.html
@@ -29,8 +29,8 @@
                 <div class="certificaciones">
                     <p><a href="#certificaciones">CERTIFICACIONES</a></p>
                 </div>
-                <div class="referenciasLaborales">
-                    <p><a href="#referenciasLaborales">REFERENCIAS LABORALES</a></p>
+                <div class="experienciaLaboral">
+                    <p><a href="#experienciaLaboral">EXPERIENCIA LABORAL</a></p>
                 </div>
                 <div class="referenciasPersonales">
                     <p><a href="#referenciasPersonales">REFERENCIAS PERSONALES</a></p>
@@ -62,6 +62,11 @@
                         <li>TELÉFONO: 354 128 5193</li>
                         <li>EMAIL: emos_91@hotmail.com</li>
                     </ul>
+                    <div class="links">
+                        <a class="link" href="https://www.linkedin.com/in/melina-obando-s%C3%A1nchez-0322301b2/"
+                            target="_blank"><img class="vectorLinkedin" src="vector-LinkedIn.png">  LinkedIn </a> <br>
+                        <a class="link" href="https://github.com/MeliObandoS" target="_blank"><img class="vector-GitHub" src="logo-GitHub.png"> GitHub</a>
+                    </div>
                 </div>
             </section>
         </div>
@@ -126,7 +131,7 @@
             </ul>
         </div>
 
-        <div id="educación">
+        <div id="educacion">
             <h2>EDUCACIÓN</h2>
             <ul>
                 <li>Bachiller Académico.
@@ -213,6 +218,10 @@
         </div>
 
         <footer class="footer"> <strong> MI PRIMER CV HECHO CON CODING</strong> </footer>
+        
+        <div class="inicioFooter">
+            <p><a href="#inicio">Volver a Inicio</a></p>
+        </div>
 
     </section>
 </body>
