--- a/CV-MEJORADO.html
+++ b/CV-MEJORADO.html
@@ -198,7 +198,7 @@
                 </li>
             </ul>
         </div>
-        <div id="referenciasPersonales">
+        <div idgitgit="referenciasPersonales">
             <H2>REFERENCIAS PERSONALES</H2>
             <ul>
                 <li><strong>Pedro Utreras López.</strong>
