--- a/CV-MEJORADO.html
+++ b/CV-MEJORADO.html
@@ -91,7 +91,7 @@
             </section>
         </div>
 
-        <div id="referenciasLaborales">
+        <div id="experienciaLaboral">
             <h2>EXPERIENCIA LABORAL</h2>
             <ul>
                 <li>
@@ -198,7 +198,7 @@
                 </li>
             </ul>
         </div>
-        <div idgitgit="referenciasPersonales">
+        <div id="referenciasPersonales">
             <H2>REFERENCIAS PERSONALES</H2>
             <ul>
                 <li><strong>Pedro Utreras López.</strong>
