cambio link RRSS

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <li>EMAIL: emos_91@hotmail.com</li>
                     </ul>
                     <div class="links">
-                        <a class="link" href="https://www.linkedin.com/in/melina-obando-s%C3%A1nchez-0322301b2/"
+                        <a class="link" href="https://www.linkedin.com/in/melina-obando-s%C3%A1nchez/"
                             target="_blank"><img class="vectorLinkedin" src="vector-LinkedIn.png">  LinkedIn </a> <br>
                         <a class="link" href="https://github.com/MeliObandoS" target="_blank"><img class="vector-GitHub" src="logo-GitHub.png"> GitHub</a>
                     </div>
